# PADIS

./: pyproject.toml
src/padis/: assessment.py  assignment.py  canisgenes.py  cli.py  identification.py  input.py  padis.py
